key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/generics-plain/GenPlain.java
public class GenPlain<T> {
    T value;
    T get() { return value; }
    void set(T v) { value = v; }
}
